--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <meta name="description" content="Custom Portfolio Template" />
   <title>Custom Portfolio Template</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
